--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>pt.theninjask</groupId>
 	<artifactId>externalconsole</artifactId>
-	<version>0.1.3</version>
+	<version>0.2.0</version>
 	<packaging>jar</packaging>
 
 	<name>ExternalConsole</name>
@@ -40,6 +40,11 @@
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-nop</artifactId>
 			<version>1.7.36</version>
+		</dependency>
+		<dependency>
+			<groupId>org.python</groupId>
+			<artifactId>jython-standalone</artifactId>
+			<version>2.7.3</version>
 		</dependency>
 	</dependencies>
 	
