Mock server: add header overrides and refactor
Add support for overriding Authorization token and Cookie in MockServer requests, and refactor handler argument passing.

- Introduce --override-token and --override-cookie CLI options and wire them into a new MockHandlerArgs @Builder/@Getter class.
- Extract getMockHandlerArgs to assemble handler parameters and pass a single args object to MockHandler.
- Update header forwarding to respect an overridden Authorization header and skip certain hop-by-hop headers.
- Replace ecmd.isProgram() check with isProgramRunning.get() in executeCommand to avoid running commands while a program is active.
- Bump Lombok version to 1.18.36 and restore the Lombok dependency entry in pom.xml.
- Minor cleanup: remove unused import and adjust code formatting.

--- a/pom.xml
+++ b/pom.xml
@@ -18,17 +18,16 @@
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <jarName>ExternalConsole</jarName>
-        <lombok.version>1.18.32</lombok.version>
+        <lombok.version>1.18.36</lombok.version>
     </properties>
 
     <dependencies>
-        <!--
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>${lombok.version}</version>
             <scope>provided</scope>
-        </dependency>-->
+        </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
